RESOLVED FIXED200342
Fix libwebrtc build with Linux 5.2 headers
https://bugs.webkit.org/show_bug.cgi?id=200342
Summary Fix libwebrtc build with Linux 5.2 headers
Loïc Yhuel
Reported 2019-08-01 04:44:42 PDT
Fix libwebrtc build with Linux 5.2 headers
Attachments
Patch (1.54 KB, patch)
2019-08-01 04:45 PDT, Loïc Yhuel
no flags
Loïc Yhuel
Comment 1 2019-08-01 04:45:25 PDT
WebKit Commit Bot
Comment 2 2019-08-01 06:36:49 PDT
Comment on attachment 375304 [details] Patch Clearing flags on attachment: 375304 Committed r248100: <https://trac.webkit.org/changeset/248100>
WebKit Commit Bot
Comment 3 2019-08-01 06:36:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-08-01 06:37:17 PDT
Note You need to log in before you can comment on or make changes to this bug.