Fix libwebrtc build with Linux 5.2 headers https://bugs.webkit.org/show_bug.cgi?id=200342

Patch by Loïc Yhuel <loic.yhuel@softathome.com> on 2019-08-01
Reviewed by Eric Carlson.

We need to include linux/sockios.h for SIOCGSTAMP.
Take upstream fix from https://bugs.chromium.org/p/webrtc/issues/detail?id=10677.

* Source/webrtc/rtc_base/physicalsocketserver.cc:

Canonical link: https://commits.webkit.org/214120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248100 268f45cc-cd09-0410-ab3c-d52691b4dbfc